welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: ';' expected but '=' found.
		nb:Int=nums(i)
                      ^