welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	var nb:Int=nums(0)
	for (i<-0 to nums.length-4) {
		nb:Int=nums(i)
			if (nums(i+1)==nb) {
				if (nums (i+2)==nb) {
					return false
				}
			}
	}
	return true
}